fixing zip file error?

--- a/validator.html
+++ b/validator.html
@@ -69,7 +69,7 @@
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
               <p><a href="https://colab.research.google.com/drive/1J88jqKmxqtc3x2wLsYQ9fF3meKnfLRsS?usp=sharing">Project link</a></p>
-              <a id="folder-download" href="files/validator-csvs" download="validator-csv-files">CSV files (required to upload to the workbook for it to function)</a>
+              <a id="folder-download" href="files/validator-csvs.zip" download="validator-csv-files">CSV files (required to upload to the workbook for it to function)</a>
             </div>  
           </div>
         </div>
