--- a/validator.html
+++ b/validator.html
@@ -99,7 +99,7 @@ img.file("smile.gif", imgData, {base64: true});
 zip.generateAsync({type:"blob"})
 .then(function(content) {
     // see FileSaver.js
-    saveAs(content, "example.zip");
+    saveAs(content, "validator-csvs.zip");
 });
 </script>
 </body>
