adding download page for validator csvs

--- a/validator.html
+++ b/validator.html
@@ -69,7 +69,8 @@
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
               <p><a href="https://colab.research.google.com/drive/1J88jqKmxqtc3x2wLsYQ9fF3meKnfLRsS?usp=sharing">Project link</a></p>
-              <a id="folder-download" href="files/validator-csvs.zip" download="validator-csv-files">CSV files (required to upload to the workbook for it to function)</a>
+              <p><a href="validator-csv-download.html">CSV files (required to upload to the workbook for it to function)</a></p>
+              <!-- <a id="folder-download" href="files/validator-csvs.zip" download="validator-csv-files">CSV files (required to upload to the workbook for it to function)</a> -->
             </div>  
           </div>
         </div>
