--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,14 @@
     <!-- <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a> -->
   </div>
 </div>
-
+<div>
+  <div class="portfolio-heading">
+    <a href="goodreads_article.html" class="portfolio-link">
+    <h2>Metadata Analysis Data Project:</h2>
+    </a>
+  </div>
+  <a href="collage.html"><img class="project-thumbnail" src="images/collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a>
+</div>
  
   <button id="home-page"><a href="index.html">Home Page</a></button>
 
