--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
     <h2>Metadata Analysis Data Project:</h2>
     </a>
   </div>
-  <a href="collage.html"><img class="project-thumbnail" src="images/collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a>
+  <!-- <a href="collage.html"><img class="project-thumbnail" src="images/collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a> -->
 </div>
  
   <button id="home-page"><a href="index.html">Home Page</a></button>
