Adding a page title

--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -14,6 +14,7 @@
     <script src="scripts.js"></script>
   </head>
 <body>
+    <h1>Visualizing Collection Insights: A Case Study Using Goodreads Metadata</h1>
     <div id="good_reads_vis_1">
         <div class='tableauPlaceholder' id='viz1746022672631' style='position: relative'>
             <noscript>
