--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -37,6 +37,9 @@
             </object>
         </div>
     </div>
+<footer>
+    <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
+</footer>
 <script type='text/javascript'>
     var divElement = document.getElementById('viz1746022672631');
     var vizElement = divElement.getElementsByTagName('object')[0];
@@ -45,4 +48,5 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
+
 </body>
