--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -14,7 +14,10 @@
     <script src="scripts.js"></script>
   </head>
 <body>
-    <h1>Visualizing Collection Insights: A Case Study Using Goodreads Metadata</h1>
+    <header class="sub-portfolio-head-background" id="goodreads-head-background">
+        <h1 class="goodreads-h1">Visualizing Collection Insights: A Case Study Using Goodreads Metadata</h1>
+    </header>
+    <div class="subpage-content">
     <img src="images/categories_gantt_draft.png" alt="to be added" width="60%" height="600">
     <div id="good_reads_vis_1">
         <div class='tableauPlaceholder' id='viz1746022672631' style='position: relative'>
