--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -18,26 +18,43 @@
         <h1 class="goodreads-h1">Visualizing Collection Insights: A Case Study Using Goodreads Metadata</h1>
     </header>
     <div class="subpage-content">
-    <img src="images/categories_gantt_draft.png" alt="to be added" width="60%" height="600">
-    <div id="good_reads_vis_1">
-        <div class='tableauPlaceholder' id='viz1746022672631' style='position: relative'>
-            <noscript>
-                <a href='#'>
-                    <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreads_top_60_subjects&#47;Sheet1&#47;1_rss.png' style='border: none' />
-                </a>
-            </noscript>
-            <object class='tableauViz'  style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
-                <param name='name' value='goodreads_top_60_subjects&#47;Sheet1' />
-                <param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreads_top_60_subjects&#47;Sheet1&#47;1.png' />
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
-                <param name='language' value='en-US' />
-            </object>
+        <div class="subpage-section" id="nav-block">
+            <nav class="portfolio-nav">
+              <div class="rethink-sans-bodyfont">
+                <ul class="nav-list">
+                  <li><a id="nav-home" href="index.html">Home</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="resume.html">Resume</a></li>
+                </ul>
+              </div>  
+            </nav>
+        </div>
+        <div class="goodreads-page-content">
+            <div class="goodreads-content-box">
+                <h2>About the Project</h2>
+                <img src="images/categories_gantt_draft.png" alt="to be added" width="60%" height="600">
+                <div id="good_reads_vis_1">
+                    <div class='tableauPlaceholder' id='viz1746022672631' style='position: relative'>
+                        <noscript>
+                            <a href='#'>
+                                <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreads_top_60_subjects&#47;Sheet1&#47;1_rss.png' style='border: none' />
+                            </a>
+                        </noscript>
+                    <object class='tableauViz'  style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+                        <param name='name' value='goodreads_top_60_subjects&#47;Sheet1' />
+                        <param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreads_top_60_subjects&#47;Sheet1&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
+                        <param name='language' value='en-US' />
+                    </object>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 <footer>
