--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -269,9 +269,18 @@
                     </tr>
                 </table>
 
+                <h2>Potential Applications of Analysis- Identifying Speciic Trends</h2>
+                <h2>Shifts in the Popularity of Romance Novel Subgenres</h2>
+
+                <h2>Declining interest in vampire books</h2>
+                <h2>Shifts in focus on social justice in the highly circulating collection</h2>
+                <h2>Representation of Queerness in the Collection</h2>
+
+                <h2>Overall Findings- significant difference in the changes between topics across the years</h2>
+                <div class='tableauPlaceholder' id='viz1746628425801' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreadssubjecttermdeltaschart&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='goodreadssubjecttermdeltaschart&#47;Dashboard1' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;go&#47;goodreadssubjecttermdeltaschart&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1746628425801');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='610px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='610px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.minHeight='750px';vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+                <br>
                 <h2>Interested in exploring the data yourself? Right click individual lines or click the checkboxes in the subject filter below to highlight specific subject tags.</h2>
 
-                
                 <!-- <img src="images/categories_gantt_draft.png" alt="to be added" width="60%" height="600"> -->
 
                 <div id="good_reads_vis_1">
