Adding Portfolio Sub Page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,19 +64,33 @@
     <div id="portfolio-download-box">
       <a class="rethink-sans-subhead" id="portfolio-download" href="files/casey-lis-portfolio-write-ups.pdf" download="maddy-casey-mslis-pratt-grad-portfolio-sp25.pdf">Text only Portfolio</a>
     </div>
-    <!-- <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a> -->
   </div>
-  <div class="portfolio-heading">
-    <a href="goodreads_article.html" class="portfolio-link">
-    <h2>Metadata Analysis Data Project:</h2>
-    </a>
+  <div>
+    <div class="portfolio-heading">
+      <a href="goodreads.html" class="portfolio-link">
+      <h2>Metadata Analysis Data Project:</h2>
+      </a>
+    </div>
+    <!-- <a href="goodreads_article.html"><img class="project-thumbnail" src="goodreads-thumb.svg" alt=""></a> -->
   </div>
-  <!-- <a href="collage.html"><img class="project-thumbnail" src="images/collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a> -->
+  <div>
+    <div class="portfolio-heading">
+      <a href="#" class="portfolio-link">
+      <h2>Digital Accessibility Project (In Progress)</h2>
+      </a>
+    </div>
+    <!-- <a href="goodreads_article.html"><img class="project-thumbnail" src="goodreads-thumb.svg" alt=""></a> -->
+  </div>
+  <div>
+    <div class="portfolio-heading">
+      <a href="#" class="portfolio-link">
+      <h2>NYC Data Art (In Progress)</h2>
+      </a>
+    </div>
+    <!-- <a href="goodreads_article.html"><img class="project-thumbnail" src="goodreads-thumb.svg" alt=""></a> -->
+  </div>
 </div>
-</div>
-<div>
 
- 
   <button id="home-page"><a href="index.html">Home Page</a></button>
 
   <footer>
