--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -311,6 +311,7 @@
             </div>
         </div>
     </div>
+<button id="home-page"><a href="goodreads.html">Return to Project Overview</a></button>
 <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
 </footer>
