fixing page spacing
attempting to fix the weirdness with the links on the portfolio pages

--- a/baaaad.html
+++ b/baaaad.html
@@ -68,7 +68,7 @@
               <h2 class="rethink-sans-subhead">Access this Project:</h2>
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
-              <p><br><a href="https://studentwork.prattsi.org/bookarts/">Project Website</a></p>
+              <p><a href="https://studentwork.prattsi.org/bookarts/">Project Website</a></p>
               <p><a id="folder-download" href="files/process_zine-baaaad-color.pdf" download="process-zine.pdf">Process zine (designed to be printed in black and white)</a></p>
               <p><a id="folder-download" href="files/dataset-documentation-plan-baaaad.pdf" download="data-documentation-plan.pdf">Project data documentation plan</a></p>
               <p><a id="folder-download" href="files/blog-post-guiding-questions-baaaad.pdf" download="blog-post-guiding-questions.pdf">Blog post sample questions</a></p>
