--- a/libguide.html
+++ b/libguide.html
@@ -68,7 +68,7 @@
             <h2 class="rethink-sans-subhead">Access this Project:</h2>
           </div>
           <div class="access-project-links rethink-sans-bodyfont">
-            <p><br><a href="https://prattlis.libguides.com/c.php?g=1379726&p=10201673">Explore the LibGuide!</a></p>
+            <p><a href="https://prattlis.libguides.com/c.php?g=1379726&p=10201673">Explore the LibGuide!</a></p>
             <!-- <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a> -->
           </div>  
         </div>
