--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
   </div>
 </div>
 
-  <button id="home-page"><a href="index.html">Home Page</a></button>
+  <button class="home-button" id="home-page"><a href="index.html">Home Page</a></button>
 
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
