updating website with carousel

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,10 +68,10 @@
   <div>
     <div class="portfolio-heading">
       <a href="goodreads.html" class="portfolio-link">
-      <h2>Metadata Analysis Data Project:</h2>
+      <h2>Metadata Analysis Project:</h2>
       </a>
     </div>
-    <!-- <a href="goodreads_article.html"><img class="project-thumbnail" src="goodreads-thumb.svg" alt=""></a> -->
+    <a href="goodreads.html"><img class="project-thumbnail" src="images/goodreads-thumb.svg" alt=""></a>
   </div>
   <div>
     <div class="portfolio-heading">
