--- a/goodreads.html
+++ b/goodreads.html
@@ -68,15 +68,15 @@
             <div class="portfolio-page-box">
               <button class="accordion">Project Description</button>
               <div class="panel rethink-sans-bodyfont">
-                <p></p>
+                <p>To be updated</p>
               </div>
               <button class="accordion">Methods</button>
               <div class="panel rethink-sans-bodyfont">
-                <p></p>
+                <p>To be updated</p>
               </div>
               <button class="accordion">My Role</button>
               <div class="panel rethink-sans-bodyfont">
-                <p></p>
+                <p>To be updated</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
               <div class="panel rethink-sans-bodyfont">
