--- a/goodreads_article.html
+++ b/goodreads_article.html
@@ -226,6 +226,7 @@
                 <p>The binary data I collected about the assignment of each genre tag to the books was also useful for calculating simple correlations between topics or book categories and topics, to explore relationships between topics.  This was accomplished in Python, using simple scripts, and the libraries pandas and SciPy.</p>
                 <p>The datasets collected for the project, and tutorials for how to replicate this analysis are available via the project <a href=””>GitHub page</a>.</p>
                 <p>As a note, subject terms (called “genres” on Goodreads) can be a particularly useful tool for exploration of the topics included in a collection.  However there are limitations to their use as a reflection of materials’ topics; subject term tags are designed to facilitate discovery in a large database of materials, rather than describe plot points.  Additionally, the language used in subject terms is reflective of the cultural context, norms and expectations in which the terms are created. For example, the choice to tag a book as “lgbt” versus “queer” may reflect changing practices in semantic expressions of queerness just as much as the content of the book itself. However, for the purpose of metadata analysis, exploring trends using subject terms can still yield valuable insights about broad content themes of a collection and the ways in which a collection has been described by staff responsible for writing and sourcing metadata.  In this way, metadata analysis can also help highlight interesting semantic choices made by book catalogers, and potentially even facilitate reparatative metadata work by highlighting terminology which can be updated.</p>
+
                 <h2>Findings Vignettes</h2>
                 <p>In order to demonstrate potential opportunities for exploration enabled by metadata analysis in this context, I chose to create a series of “vignettes” exploring various trends, to illustrate some of the findings and assessment which could be made using the collected data.</p>
                 <br>
@@ -362,9 +363,12 @@
                     </div>
                 </div>
                 <br>
+                <h2>Future Project Directions</h2>
+                <p>In future iterations of the project, I plan to build out tutorials outlining the analysis process in the project GitHub, in order to facilitate project replication. I also plan to recreate the project using messier and larger datasets, to develop a workflow for working with a dataset which is perhaps more realistic to a real world public library's collections metadata.</p>
             </div>
         </div>
     </div>
+
     
 <button class="home-button" id="goodreads-page"><a href="goodreads.html">Return to Project Overview</a></button>
 <footer>
